tests/ui/asm/powerpc/bad-reg.powerpc.stderr
error: invalid register `sp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:32:18
   |
LL |         asm!("", out("sp") _);
   |                  ^^^^^^^^^^^

error: invalid register `r2`: r2 is a system reserved register and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:34:18
   |
LL |         asm!("", out("r2") _);
   |                  ^^^^^^^^^^^

error: invalid register `r29`: r29 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:38:18
   |
LL |         asm!("", out("r29") _);
   |                  ^^^^^^^^^^^^

error: invalid register `r30`: r30 is used internally by LLVM and cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:40:18
   |
LL |         asm!("", out("r30") _);
   |                  ^^^^^^^^^^^^

error: invalid register `fp`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:42:18
   |
LL |         asm!("", out("fp") _);
   |                  ^^^^^^^^^^^

error: invalid register `lr`: the link register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:44:18
   |
LL |         asm!("", out("lr") _);
   |                  ^^^^^^^^^^^

error: invalid register `ctr`: the counter register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:46:18
   |
LL |         asm!("", out("ctr") _);
   |                  ^^^^^^^^^^^^

error: invalid register `vrsave`: the vrsave register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:48:18
   |
LL |         asm!("", out("vrsave") _);
   |                  ^^^^^^^^^^^^^^^

error: register class `cr` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:66:18
   |
LL |         asm!("", in("cr") x);
   |                  ^^^^^^^^^^

error: register class `cr` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:69:18
   |
LL |         asm!("", out("cr") x);
   |                  ^^^^^^^^^^^

error: register class `cr` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:72:26
   |
LL |         asm!("/* {} */", in(cr) x);
   |                          ^^^^^^^^

error: register class `cr` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:75:26
   |
LL |         asm!("/* {} */", out(cr) _);
   |                          ^^^^^^^^^

error: register class `xer` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:79:18
   |
LL |         asm!("", in("xer") x);
   |                  ^^^^^^^^^^^

error: register class `xer` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:82:18
   |
LL |         asm!("", out("xer") x);
   |                  ^^^^^^^^^^^^

error: register class `xer` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:85:26
   |
LL |         asm!("/* {} */", in(xer) x);
   |                          ^^^^^^^^^

error: register class `xer` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:88:26
   |
LL |         asm!("/* {} */", out(xer) _);
   |                          ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:93:18
   |
LL |         asm!("", in("v0") x);
   |                  ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:96:18
   |
LL |         asm!("", out("v0") x);
   |                  ^^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:99:26
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                          ^^^^^^^^^^

error: register class `vreg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:102:26
   |
LL |         asm!("/* {} */", out(vreg) _);
   |                          ^^^^^^^^^^^

error: register `cr0` conflicts with register `cr`
  --> $DIR/bad-reg.rs:106:31
   |
LL |         asm!("", out("cr") _, out("cr0") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr0`
   |                  |
   |                  register `cr`

error: register `cr1` conflicts with register `cr`
  --> $DIR/bad-reg.rs:108:31
   |
LL |         asm!("", out("cr") _, out("cr1") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr1`
   |                  |
   |                  register `cr`

error: register `cr2` conflicts with register `cr`
  --> $DIR/bad-reg.rs:110:31
   |
LL |         asm!("", out("cr") _, out("cr2") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr2`
   |                  |
   |                  register `cr`

error: register `cr3` conflicts with register `cr`
  --> $DIR/bad-reg.rs:112:31
   |
LL |         asm!("", out("cr") _, out("cr3") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr3`
   |                  |
   |                  register `cr`

error: register `cr4` conflicts with register `cr`
  --> $DIR/bad-reg.rs:114:31
   |
LL |         asm!("", out("cr") _, out("cr4") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr4`
   |                  |
   |                  register `cr`

error: register `cr5` conflicts with register `cr`
  --> $DIR/bad-reg.rs:116:31
   |
LL |         asm!("", out("cr") _, out("cr5") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr5`
   |                  |
   |                  register `cr`

error: register `cr6` conflicts with register `cr`
  --> $DIR/bad-reg.rs:118:31
   |
LL |         asm!("", out("cr") _, out("cr6") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr6`
   |                  |
   |                  register `cr`

error: register `cr7` conflicts with register `cr`
  --> $DIR/bad-reg.rs:120:31
   |
LL |         asm!("", out("cr") _, out("cr7") _);
   |                  -----------  ^^^^^^^^^^^^ register `cr7`
   |                  |
   |                  register `cr`

error: cannot use register `r13`: r13 is a reserved register on this target
  --> $DIR/bad-reg.rs:36:18
   |
LL |         asm!("", out("r13") _);
   |                  ^^^^^^^^^^^^

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:66:27
   |
LL |         asm!("", in("cr") x);
   |                           ^
   |
   = note: register class `cr` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:69:28
   |
LL |         asm!("", out("cr") x);
   |                            ^
   |
   = note: register class `cr` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:72:33
   |
LL |         asm!("/* {} */", in(cr) x);
   |                                 ^
   |
   = note: register class `cr` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:79:28
   |
LL |         asm!("", in("xer") x);
   |                            ^
   |
   = note: register class `xer` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:82:29
   |
LL |         asm!("", out("xer") x);
   |                             ^
   |
   = note: register class `xer` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:85:34
   |
LL |         asm!("/* {} */", in(xer) x);
   |                                  ^
   |
   = note: register class `xer` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:93:27
   |
LL |         asm!("", in("v0") x);
   |                           ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:96:28
   |
LL |         asm!("", out("v0") x);
   |                            ^
   |
   = note: register class `vreg` supports these types: 

error: type `i32` cannot be used with this register class
  --> $DIR/bad-reg.rs:99:35
   |
LL |         asm!("/* {} */", in(vreg) x);
   |                                   ^
   |
   = note: register class `vreg` supports these types: 

error: aborting due to 38 previous errors

